k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-chat-widget-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-north-1:448866508458:certificate/3a8358f3-c582-45c7-bce1-9c2f77b090bc"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "ersona-dev"
    external-dns.alpha.kubernetes.io/hostname: "dev-widget.ersona.co"
spec:
  rules:
  - host: "dev-widget.ersona.co"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cs-chat-widget
            port:
              number: 3000
